--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,13 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "justMyCode": true
+            "justMyCode": true,
+            "args": [
+                "--data_source=10x6",
+                "--test_data", "10x6+mix", "11x5+mix", "11x6+mix",
+                "--model_source=SD2",
+                "--test_model", "10x5+mix+maml_sd2_same", "10x5+mix+maml_sd2_same_"
+            ]
         }
     ]
 }
