--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,26 +6,26 @@
     "configurations": [
         {
             "name": "Python: 当前文件",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": [
-                "--logdir", "./runs/exp11_maml",
-                "--model_suffix", "exp11_1k_opt",
-                "--maml_model", "True",
-                "--meta_iterations", "1000",
-                "--num_tasks", "5",
-                "--max_updates", "1000",
-                "--num_envs", "5",
-                "--hidden_dim_actor", "128",
-                "--hidden_dim_critic", "128",
-                "--num_mlp_layers_actor", "5",
-                "--num_mlp_layers_critic", "5",
-                "--n_j_options", "8", "10", "11", "13", "15", "16", "17", "20", "21",
-                "--n_m_options", "4", "5", "8", "10", "12"
-            ]
+            // "args": [
+            //     "--logdir", "./runs/exp11_maml",
+            //     "--model_suffix", "exp11_1k_opt",
+            //     "--maml_model", "True",
+            //     "--meta_iterations", "1000",
+            //     "--num_tasks", "5",
+            //     "--max_updates", "1000",
+            //     "--num_envs", "5",
+            //     "--hidden_dim_actor", "128",
+            //     "--hidden_dim_critic", "128",
+            //     "--num_mlp_layers_actor", "5",
+            //     "--num_mlp_layers_critic", "5",
+            //     "--n_j_options", "8", "10", "11", "13", "15", "16", "17", "20", "21",
+            //     "--n_m_options", "4", "5", "8", "10", "12"
+            // ]
         }
     ]
 }
