--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,7 @@
 name: RL-torch
 channels:
+  - pytorch
+  - nvidia
   - conda-forge
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
@@ -7,86 +9,225 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - abseil-cpp=20230802.0=h6a678d5_2
+  - absl-py=1.4.0=py310h06a4308_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - archspec=0.2.3=pyhd3eb1b0_0
   - asttokens=2.4.0=pyhd8ed1ab_0
+  - async-timeout=4.0.3=py310h06a4308_0
+  - attrs=23.1.0=py310h06a4308_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=pyhd8ed1ab_3
   - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+  - blas=1.0=mkl
+  - blinker=1.6.2=py310h06a4308_0
+  - boltons=23.0.0=py310h06a4308_0
+  - brotli-python=1.0.9=py310h6a678d5_7
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.7.22=hbcca054_0
+  - c-ares=1.19.1=h5eee18b_0
+  - ca-certificates=2024.2.2=hbcca054_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - chardet=5.2.0=py310hff52083_1
+  - click=8.1.7=py310h06a4308_0
   - comm=0.1.4=pyhd8ed1ab_0
+  - conda=23.11.0=py310h06a4308_0
+  - conda-libmamba-solver=24.1.0=pyhd3eb1b0_0
+  - conda-package-handling=2.2.0=py310h06a4308_0
+  - conda-package-streaming=0.9.0=py310h06a4308_0
+  - cuda-cudart=11.8.89=0
+  - cuda-cupti=11.8.87=0
+  - cuda-libraries=11.8.0=0
+  - cuda-nvrtc=11.8.89=0
+  - cuda-nvtx=11.8.86=0
+  - cuda-runtime=11.8.0=0
   - debugpy=1.6.7=py310h6a678d5_0
   - decorator=5.1.1=pyhd8ed1ab_0
+  - distro=1.8.0=py310h06a4308_0
   - entrypoints=0.4=pyhd8ed1ab_0
   - exceptiongroup=1.1.3=pyhd8ed1ab_0
   - executing=1.2.0=pyhd8ed1ab_0
+  - ffmpeg=4.2.2=h20bf706_0
+  - filelock=3.13.1=py310h06a4308_0
+  - fmt=9.1.0=hdb19cb5_0
+  - freetype=2.12.1=h4a9f257_0
+  - frozenlist=1.4.0=py310h5eee18b_0
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py310heeb90bb_0
+  - gnutls=3.6.15=he1e5248_0
+  - google-auth=2.6.0=pyhd3eb1b0_0
+  - google-auth-oauthlib=0.5.2=py310h06a4308_0
+  - grpc-cpp=1.48.2=he1ff14a_4
+  - grpcio=1.48.2=py310he1ff14a_4
+  - gtest=1.14.0=hdb19cb5_0
+  - icu=73.1=h6a678d5_0
+  - idna=3.4=py310h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
   - ipykernel=6.25.2=pyh2140261_0
   - ipython=8.15.0=pyh0d859eb_0
   - jedi=0.19.0=pyhd8ed1ab_0
+  - jinja2=3.1.3=py310h06a4308_0
+  - jpeg=9e=h5eee18b_1
+  - jsonpatch=1.32=pyhd3eb1b0_0
+  - jsonpointer=2.1=pyhd3eb1b0_0
   - jupyter_client=7.3.4=pyhd8ed1ab_0
   - jupyter_core=5.3.1=py310hff52083_0
+  - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libarchive=3.6.2=h6ac8c49_2
+  - libcublas=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufile=1.8.1.2=0
+  - libcurand=10.3.4.101=0
+  - libcurl=8.5.0=h251f7ec_0
+  - libcusolver=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
+  - libdeflate=1.17=h5eee18b_1
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=h7f8727e_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=13.2.0=h69a702a_0
+  - libgfortran5=13.2.0=ha4646dd_0
   - libgomp=11.2.0=h1234567_1
+  - libidn2=2.3.4=h5eee18b_0
+  - libjpeg-turbo=2.0.0=h9bf148f_0
+  - libmamba=1.5.6=haf1ee3a_0
+  - libmambapy=1.5.6=py310h2dafd23_0
+  - libnghttp2=1.57.0=h2d74bed_0
+  - libnpp=11.8.0.86=0
+  - libnvjpeg=11.9.0.86=0
+  - libopus=1.3.1=h7b6447c_0
+  - libpng=1.6.39=h5eee18b_0
+  - libprotobuf=3.20.3=he621ea3_0
   - libsodium=1.0.18=h36c2ea0_1
+  - libsolv=0.7.24=he621ea3_0
+  - libssh2=1.10.0=hdbd6064_2
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
+  - libtiff=4.5.1=h6a678d5_0
+  - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
+  - libvpx=1.7.0=h439df22_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - libxml2=2.10.4=hf1b16e4_1
+  - llvm-openmp=14.0.6=h9e868ea_0
+  - lz4-c=1.9.4=h6a678d5_0
+  - markdown=3.4.1=py310h06a4308_0
+  - markupsafe=2.1.3=py310h5eee18b_0
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - menuinst=2.0.2=py310h06a4308_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py310h5eee18b_1
+  - mkl_fft=1.3.8=py310h5eee18b_0
+  - mkl_random=1.2.4=py310hdb19cb5_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.3.0=py310h06a4308_0
+  - multidict=6.0.4=py310h5eee18b_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - openssl=3.0.10=h7f8727e_2
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=3.1=py310h06a4308_0
+  - numpy-base=1.26.4=py310hb5e798b_0
+  - oauthlib=3.2.2=py310h06a4308_0
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=3.0.13=h7f8727e_0
   - packaging=23.1=pyhd8ed1ab_0
   - parso=0.8.3=pyhd8ed1ab_0
   - pcre=8.45=h9c3ff4c_0
+  - pcre2=10.42=hebb0a14_0
   - pexpect=4.8.0=pyh1a96a4e_2
   - pickleshare=0.7.5=py_1003
+  - pillow=10.2.0=py310h5eee18b_0
   - pip=23.2.1=py310h06a4308_0
   - platformdirs=3.10.0=pyhd8ed1ab_0
+  - pluggy=1.0.0=py310h06a4308_1
   - prompt-toolkit=3.0.39=pyha770c72_0
   - prompt_toolkit=3.0.39=hd8ed1ab_0
+  - protobuf=3.20.3=py310h6a678d5_0
   - psutil=5.9.0=py310h5eee18b_0
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
+  - pybind11-abi=4=hd3eb1b0_1
+  - pycosat=0.6.6=py310h5eee18b_0
+  - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.16.1=pyhd8ed1ab_0
+  - pyjwt=2.4.0=py310h06a4308_0
+  - pyopenssl=24.0.0=py310h06a4308_0
+  - pysocks=1.7.1=py310h06a4308_0
   - python=3.10.13=h955ad1f_0
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.10=2_cp310
+  - pytorch=2.1.2=py3.10_cuda11.8_cudnn8.7.0_0
+  - pytorch-cuda=11.8=h7e8668a_5
+  - pytorch-mutex=1.0=cuda
+  - pyyaml=6.0.1=py310h5eee18b_0
   - pyzmq=25.1.0=py310h6a678d5_0
+  - re2=2022.04.01=h295c915_0
   - readline=8.2=h5eee18b_0
+  - reproc=14.2.4=h295c915_1
+  - reproc-cpp=14.2.4=h295c915_1
+  - requests=2.31.0=py310h06a4308_1
+  - requests-oauthlib=1.3.0=py_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - ruamel.yaml=0.17.21=py310h5eee18b_0
+  - ruamel.yaml.clib=0.2.6=py310h5eee18b_1
   - setuptools=68.0.0=py310h06a4308_0
   - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.41.2=h5eee18b_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - swig=4.0.2=hd3c618e_2
+  - sympy=1.12=py310h06a4308_0
+  - tbb=2021.8.0=hdb19cb5_0
+  - tensorboard-data-server=0.7.0=py310h52d8a92_0
   - tk=8.6.12=h1ccaba5_0
+  - torchaudio=2.1.2=py310_cu118
+  - torchtriton=2.1.0=py310
   - tornado=6.1=py310h5764c6d_3
   - traitlets=5.9.0=pyhd8ed1ab_0
-  - typing-extensions=4.7.1=hd8ed1ab_0
-  - typing_extensions=4.7.1=pyha770c72_0
+  - truststore=0.8.0=py310h06a4308_0
   - tzdata=2023c=h04d1e81_0
+  - visdom=0.2.4=pyhd8ed1ab_0
   - wcwidth=0.2.6=pyhd8ed1ab_0
+  - websocket-client=1.7.0=pyhd8ed1ab_0
+  - werkzeug=2.3.8=py310h06a4308_0
   - wheel=0.38.4=py310h06a4308_0
+  - x264=1!157.20191217=h7b6447c_0
   - xz=5.4.2=h5eee18b_0
+  - yaml=0.2.5=h7b6447c_0
+  - yaml-cpp=0.8.0=h6a678d5_0
   - zeromq=4.3.4=h9c3ff4c_1
   - zlib=1.2.13=h5eee18b_0
+  - zstandard=0.19.0=py310h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
   - pip:
       - aiohttp==3.8.5
-      - aiosignal==1.3.1
       - argcomplete==3.1.2
-      - async-timeout==4.0.3
-      - attrs==23.1.0
+      - blessed==1.20.0
       - boto==2.49.0
       - box2d==2.3.2
       - certifi==2023.7.22
       - cffi==1.15.1
       - charset-normalizer==3.2.0
+      - cherry-rl==0.2.0
       - cloudpickle==2.2.1
+      - colorama==0.4.6
+      - commonmark==0.9.1
+      - contourpy==1.2.0
       - crcmod==1.7
       - cryptography==41.0.3
       - cvxpy==1.3.2
+      - cycler==0.12.1
+      - dotmap==1.3.30
       - ecos==2.0.12
       - fasteners==0.18
-      - frozenlist==1.4.0
+      - fonttools==4.47.2
       - gcs-oauth2-boto-plugin==3.0
       - google-apitools==0.5.32
       - google-reauth==0.1.1
@@ -95,29 +236,32 @@ dependencies:
       - gym-notices==0.0.8
       - higher==0.2.1
       - httplib2==0.20.4
-      - idna==3.4
+      - kiwisolver==1.4.5
       - learn2learn==0.2.0
+      - matplotlib==3.8.2
       - monotonic==1.6
-      - multidict==6.0.4
       - numpy==1.26.0
       - oauth2client==4.1.3
-      - oauthlib==3.2.2
       - osqp==0.6.3
-      - pillow==10.0.1
-      - pycparser==2.21
-      - pyopenssl==23.2.0
+      - pprintpp==0.4.0
+      - ppt==0.0.7.1
+      - pybullet==3.2.6
+      - pyopengl==3.1.7
       - pyparsing==3.1.1
-      - pyu2f==0.1.5
+      - python-graphviz==0.20.1
+      - pytz==2023.3.post1
       - qdldl==0.1.7.post0
       - qpth==0.0.16
-      - requests==2.31.0
       - retry-decorator==1.1.1
-      - rsa==4.7.2
+      - rich==1.3.1
+      - roboschool==1.0.34
       - scipy==1.11.2
       - scs==3.2.3
       - tensorboard==2.14.1
       - torchvision==0.15.2
+      - torchviz==0.0.2
       - tqdm==4.66.1
+      - typing-extensions==3.10.0.2
       - urllib3==1.26.16
       - yarl==1.9.2
 variables:
